Bug 476907 - Odd title appearance in some settings dialogs
Summary: Odd title appearance in some settings dialogs
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: QStyle (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: qt6, regression
Depends on:
Blocks:
 
Reported: 2023-11-13 00:30 UTC by Nicolas Fella
Modified: 2024-02-20 10:11 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot of breeze-settings (533.97 KB, image/png)
2023-11-13 00:30 UTC, Nicolas Fella
Details
kcmshell screenshot (776.63 KB, image/png)
2023-11-13 00:31 UTC, Nicolas Fella
Details
Hotspot screenshot (149.66 KB, image/png)
2023-11-13 00:33 UTC, Nicolas Fella
Details
Dolphin screenshot (351.05 KB, image/png)
2023-11-13 00:35 UTC, Nicolas Fella
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2023-11-13 00:30:23 UTC
Created attachment 163097 [details]
Screenshot of breeze-settings

STEPS TO REPRODUCE
1. Run e.g. "breeze-settings6"

OBSERVED RESULT
the appearance is different to Qt, and not in a good way

EXPECTED RESULT
Less separators, more blending in with the rest of the title bar/tools area

SOFTWARE/OS VERSIONS
KDE Plasma Version: master
KDE Frameworks Version: master
Qt Version: 6.6

ADDITIONAL INFORMATION
See screenshot. Left is Qt6, right is Qt5
Comment 1 Nicolas Fella 2023-11-13 00:31:21 UTC
Running "kcmshell6 kcm_colors kcm_users, i.e. two KCMs at once also looks rather broken, see other screenshot
Comment 2 Nicolas Fella 2023-11-13 00:31:38 UTC
Created attachment 163098 [details]
kcmshell screenshot
Comment 3 Nicolas Fella 2023-11-13 00:33:59 UTC
Created attachment 163099 [details]
Hotspot screenshot

Similar thing in Hotspot's settings
Comment 4 Nicolas Fella 2023-11-13 00:35:20 UTC
Created attachment 163100 [details]
Dolphin screenshot

oddly enough Dolphin's settings look fine. I can't find a relevant code difference
Comment 5 Nate Graham 2023-11-15 19:19:02 UTC
Can reproduce with Hotspot and `kcmshell6 kcm_colors kcm_users`.

Seems like a visual regression with kcmultidialog or something?
Comment 6 Nicolas Fella 2024-02-20 10:11:09 UTC
Git commit 3738b2787999bf5cb0f0042fcad724c810faaad7 by Nicolas Fella, on behalf of Carl Schwan.
Committed on 20/02/2024 at 09:50.
Pushed by nicolasfella into branch 'master'.

Fix background of titlebar of KPageWidget

In some cases, the title bar of the KPageWidget is not draw. This fix
the issue by drawing it in all cases.

M  +18   -1    kstyle/breezestyle.cpp
M  +1    -0    kstyle/breezestyle.h

https://invent.kde.org/plasma/breeze/-/commit/3738b2787999bf5cb0f0042fcad724c810faaad7
Comment 7 Nicolas Fella 2024-02-20 10:11:48 UTC
Git commit 0e6715ac4826e2eee6a37f46959489f965ff912b by Nicolas Fella, on behalf of Carl Schwan.
Committed on 20/02/2024 at 10:11.
Pushed by nicolasfella into branch 'Plasma/6.0'.

Fix background of titlebar of KPageWidget

In some cases, the title bar of the KPageWidget is not draw. This fix
the issue by drawing it in all cases.
(cherry picked from commit 3738b2787999bf5cb0f0042fcad724c810faaad7)

M  +18   -1    kstyle/breezestyle.cpp
M  +1    -0    kstyle/breezestyle.h

https://invent.kde.org/plasma/breeze/-/commit/0e6715ac4826e2eee6a37f46959489f965ff912b