Fix background of titlebar of KPageWidget

In some cases, the title bar of the KPageWidget is not draw. This fix
the issue by drawing it in all cases.

BUG: 476907