kstyle/breezestyle.cpp
@@ -1568,7 +1568,9 @@ bool Style::eventFilter(QObject *object, QEvent *event)
     if (object->isWidgetType()) {
         QWidget *widget = static_cast<QWidget *>(object);
 
-        if (auto dialogButtonBox = qobject_cast<QDialogButtonBox *>(object)) {
+        if (widget->objectName() == QLatin1String("KPageView::Search") || widget->objectName() == QLatin1String("KPageView::TitleWidget")) {
+            return eventFilterPageViewHeader(widget, event);
+        } else if (auto dialogButtonBox = qobject_cast<QDialogButtonBox *>(object)) {
             if (widget->property(PropertyNames::forceFrame).toBool() || (widget->parentWidget() && widget->parentWidget()->inherits("KPageView"))) {
                 // QDialogButtonBox has no paintEvent
                 return eventFilterDialogButtonBox(dialogButtonBox, event);
@@ -1600,6 +1602,21 @@ bool Style::eventFilterDialogButtonBox(QDialogButtonBox *widget, QEvent *event)
         // define color and render
         const auto color(_helper->separatorColor(palette));
         _helper->renderSeparator(&painter, rect, color, false);
+    }
+
+    return false;
+}
+
+//____________________________________________________________________________
+bool Style::eventFilterPageViewHeader(QWidget *widget, QEvent *event)
+{
+    if (event->type() == QEvent::Paint) {
+        QPainter painter(widget);
+        const auto &palette(_toolsAreaManager->palette());
+
+        painter.setBrush(palette.color(QPalette::Window));
+        painter.setPen(Qt::NoPen);
+        painter.drawRect(widget->rect());
     }
 
     return false;
